gcc/testsuite/rust/compile/array_empty_list.rs
#![feature(no_core)]
#![no_core]

fn main() {
    let arr = [];
    // { dg-error "type annotations needed" "" { target *-*-* } .-1 }
}
